nys-94: ensure sticky filters visible when selecting year filter

--- a/web/themes/custom/nysenate_theme/src/patterns/pages/my-dashboard/my-dashboard.scss
+++ b/web/themes/custom/nysenate_theme/src/patterns/pages/my-dashboard/my-dashboard.scss
@@ -6,8 +6,6 @@
 
 // My Dashboard exposed filter styling.
 .block-views-exposed-filter-blockmy-dashboard-main {
-  margin-top: 20px;
-
   h2 {
     margin-bottom: 5px;
   }
